--- a/elasticstack_extractor.ipynb
+++ b/elasticstack_extractor.ipynb
@@ -155,10 +155,10 @@
    "source": [
     "exporter = ElasticSearchExporter()\n",
     "exporter.export(form = '<format>', #df or json\n",
-    "                host = '<hostname>', #e.g. : 'https://msb-elk-int.de050.corpintra.net:9200'\n",
+    "                host = '<hostname>', 
     "                UserName = '<user_name>',\n",
     "                Password = '<password>',\n",
-    "                indexDbName ='<indexname>', #e.g. : 'it-ocs_msb_prd-tsb-te1500ac-process-v1-2019.01.*'\n",
+    "                indexDbName ='<indexname>', 
     "                start = '<index_start>', #e.g. : '15' or '01.15' for moth and date\n",
     "                end = '<index_end>', #e.g. : '16' or '01.16' for month and date\n",
     "                docType = '<doc_type>', #e.g. : 'PROCESS'\n",
